# lores-static-sites

./: .gitignore  Dockerfile  LICENSE.md  README.md  justfile  mprocs.yaml  package-lock.json  package.json
.github/: copilot-instructions.md
backend/: Cargo.toml  openapi.json
backend/src/: main.rs  realtime.rs  static_server.rs
backend/src/public_api/: mod.rs  websites.rs
deployment/: platform.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.jsx  main.tsx  theme.css
frontend/src/api/: Api.ts
frontend/src/components/: AddWebsiteForm.tsx  Layout.tsx  WebsiteList.tsx
frontend/src/components/websites/: AddWebsiteForm.tsx  WebsiteForm.tsx  WebsiteList.tsx  websites.module.css
