[package]
name = "lores-static-sites"
version = "0.1.4"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
lazy_static = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1"
hex = "0.4"
lores-p2panda-client = "0.2.0"
